--- a/SpringBootBackend/pom.xml
+++ b/SpringBootBackend/pom.xml
@@ -65,6 +65,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>springbootmanagerapi</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
